# esp-nimble-cpp

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  _h_i_d_keyboard_types_8h_source.html  _h_i_d_types_8h_source.html  _nim_b_l_e2904_8h_source.html  _nim_b_l_e_address_8h_source.html  _nim_b_l_e_advertised_device_8h_source.html  _nim_b_l_e_advertisement_data_8h_source.html  _nim_b_l_e_advertising_8h_source.html  _nim_b_l_e_att_value_8h_source.html  _nim_b_l_e_attribute_8h_source.html  _nim_b_l_e_beacon_8h_source.html  _nim_b_l_e_characteristic_8h_source.html  _nim_b_l_e_client_8h_source.html  _nim_b_l_e_conn_info_8h_source.html  _nim_b_l_e_cpp_version_8h_source.html  _nim_b_l_e_descriptor_8h_source.html  _nim_b_l_e_device_8h_source.html  _nim_b_l_e_eddystone_t_l_m_8h_source.html  _nim_b_l_e_eddystone_u_r_l_8h_source.html  _nim_b_l_e_ext_advertising_8h_source.html  _nim_b_l_e_h_i_d_device_8h_source.html  _nim_b_l_e_l2_c_a_p_channel_8h_source.html  _nim_b_l_e_l2_c_a_p_server_8h_source.html  _nim_b_l_e_local_attribute_8h_source.html  _nim_b_l_e_local_value_attribute_8h_source.html  _nim_b_l_e_log_8h_source.html  _nim_b_l_e_remote_characteristic_8h_source.html  _nim_b_l_e_remote_descriptor_8h_source.html  _nim_b_l_e_remote_service_8h_source.html  _nim_b_l_e_remote_value_attribute_8h_source.html  _nim_b_l_e_scan_8h_source.html  _nim_b_l_e_security_8h_source.html  _nim_b_l_e_server_8h_source.html  _nim_b_l_e_service_8h_source.html  _nim_b_l_e_stream_8h_source.html  (+186 more)
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml
docs/: 1.x_to2.x_migration_guide.md  Command_line_config.md  Doxyfile  Improvements_and_updates.md  Migration_guide.md  New_user_guide.md  Usage_tips.md  index.md
examples/ANCS/: CMakeLists.txt
examples/ANCS/main/: main.cpp
examples/Advanced/NimBLE_Client/main/: main.cpp
examples/Advanced/NimBLE_Server/main/: main.cpp
examples/Bluetooth_5/NimBLE_extended_scan/: CMakeLists.txt
examples/Continuous_scan/main/: main.cpp
examples/NimBLE_Async_Client/: Makefile
examples/NimBLE_Async_Client/main/: main.cpp
examples/NimBLE_Client/main/: main.cpp
examples/NimBLE_Server/main/: main.cpp
examples/NimBLE_server_get_client_name/main/: main.cpp
examples/mesh/basic_on_off_level_server/: CMakeLists.txt  Makefile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+20 more)
src/: FreeRTOS.cpp  FreeRTOS.h  NimBLE2904.h  NimBLEAddress.cpp  NimBLEAddress.h  NimBLEAdvertisedDevice.cpp  NimBLEAdvertisedDevice.h  NimBLEAdvertisementData.cpp  NimBLEAdvertisementData.h  NimBLEAdvertising.cpp  NimBLEAdvertising.h  NimBLEAttValue.cpp  NimBLEAttValue.h  NimBLEAttribute.h  NimBLECharacteristic.cpp  NimBLECharacteristic.h  NimBLEClient.cpp  NimBLEClient.h  NimBLEConnInfo.h  NimBLECppVersion.h  NimBLEDescriptor.cpp  NimBLEDescriptor.h  NimBLEDevice.cpp  NimBLEDevice.h  NimBLEEventArgs.h  NimBLEExtAdvertising.cpp  NimBLEExtAdvertising.h  NimBLEHIDDevice.cpp  NimBLEL2CAPChannel.cpp  NimBLEL2CAPChannel.h  NimBLEL2CAPServer.cpp  NimBLEL2CAPServer.h  NimBLEL2CAPService.cpp  NimBLEL2CAPService.h  NimBLELocalValueAttribute.h  NimBLELog.h  NimBLEReadEventArgs.h  NimBLERemoteCharacteristic.cpp  NimBLERemoteCharacteristic.h  NimBLERemoteDescriptor.cpp  (+20 more)
src/mesh_config_store/config/: config.h  config_store.c
(+14 files in other folders)
